added handling of endpoints for categories